fixed issue with alignment problems: not centered

--- a/static/style/style.css
+++ b/static/style/style.css
@@ -1,29 +1,18 @@
 html {
-  height: 100%;
+  height:100%;
 }
 
 body {
-  height: 100%;
-  background-color: #FFFFFB;
-  padding-bottom: 10%;
+  height:100%;
+  background-color:#FFFFFB;
 }
 
-.progress {
-  margin: 20px;
-  padding: 20px;
-}
 
 .footer {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  height: 10%;
-  align-items: center;
-  background-color: #345773;
-}
-
-.header {
-  top: 0;
-  left: 0;
-  width: 100%
+  position:absolute;
+  right:0;
+  bottom:0;
+  left:0;
+  background-color:#345773;
+  text-align:center;
 }
